Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50097

ListViews' positionViewAtIndex doesn't take an overlay header into account

    XMLWordPrintable

Details

    • 96f1bb07eb420d5e01f1ea0273c7c9223adaf504

    Description

      One would expect that positionViewAtIndex would function exactly the same as scrolling a view, but that doesn't seem to be the case with an overlay header (maybe other header types, but that's the one I've tested right now). I guess that the header item's size needs to be taken into account when doing the positioning.

      To reproduce, open the attached testcase. Note that item 0 is visible. Press the red "+" button, followed by the red "-" button. Note that item 0 is now occluded by the header until scrolling is done with some other mechanism (e.g. mouse panning).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            w00t Robin Burchell
            w00t Robin Burchell
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes