QQuickItemView: Take sticky header/footer into account for positionViewAtIndex().

When using an overlaid header or footer, we must adjust the position we come up
with by the appropriate size in order to end up at the correct place.

Change-Id: I218b9aef7fdf37f56ffb63dc395f97045b55a186
Task-number: QTBUG-50097
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>